@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-12-01T08:18:53Z",
-  "count_outdated" : 684,
-  "uniques_outdated" : 386,
-  "count" : 715,
+  "timestamp" : "2022-12-02T01:06:41Z",
+  "count_outdated" : 686,
+  "uniques_outdated" : 387,
+  "count" : 716,
   "uniques" : 402,
   "clones" : [
-    {
-      "timestamp": "2022-11-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-18T00:00:00Z",
       "count": 2,
