@@ -1,12 +1,7 @@
 {
-  "count": 31,
+  "count": 30,
   "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2022-11-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-11-18T00:00:00Z",
       "count": 2,
