@@ -1,3 +1,11 @@
+2022-12-02T01:06:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3597940646 # 1080
+* notice: last 14d: unq all: 7 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 386 684 / 402 715
+* notice: next accum: outdated-unq outdated-all / unq all: 387 686 / 402 716
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-17] / []
+
 2022-12-01T08:18:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3590752117 # 1078
 * notice: last 14d: unq all: 7 31
